[tool.poetry]
name = "priton"
version = "0.1.0"
description = "for dating in the world :)"
authors = ["Ilya Yudin  <nibezo.cs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
vkwave = {url = "https://github.com/fscdev/vkwave/archive/master.zip"}
pony = "^0.7.14"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
